<resources>
    <string name="app_name">ToBuy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content_desc">add new item</string>
    <string name="title_hint_text_field">Title</string>
    <string name="desc_hint_text_field">Description (optional)</string>
    <string name="low_priority_radio_button">Low</string>
    <string name="medium_priority_radio_button">Medium</string>
    <string name="high_priority_radio_button">High</string>
    <string name="save_button">save</string>
    <string name="title_empty_state">No Item!</string>
    <string name="subtitle_empty_state">Use the button bellow to add an item to your list</string>
    <string name="update_button">"Update"</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="priority">Priority</string>
    <string name="exclamation_mark">!</string>
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="color_picker_label">Low (R, G, B)</string>
    <string name="red_color_name">Red</string>
    <string name="green_color_name">Green</string>
    <string name="blue_color_name">Blue</string>
    <string name="home">Home</string>
    <string name="customization">Customization</string>
</resources>