<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".presentation.screens.add_item.AddItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextField"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/title_hint_text_field"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextField"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:hint="@string/desc_hint_text_field"
            app:layout_constraintBottom_toTopOf="@id/quantityTextView"
            app:layout_constraintEnd_toEndOf="@id/titleTextField"
            app:layout_constraintStart_toStartOf="@id/titleTextField"
            app:layout_constraintTop_toBottomOf="@id/titleTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/quantityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/quantitySeekBar"
            app:layout_constraintEnd_toEndOf="@id/descriptionTextField"
            app:layout_constraintStart_toStartOf="@id/descriptionTextField"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextField" />

        <SeekBar
            android:id="@+id/quantitySeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="1"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@id/categoryTextView"
            app:layout_constraintEnd_toEndOf="@id/quantityTextView"
            app:layout_constraintStart_toStartOf="@id/quantityTextView"
            app:layout_constraintTop_toBottomOf="@id/quantityTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/categoryRw"
            app:layout_constraintEnd_toEndOf="@id/descriptionTextField"
            app:layout_constraintStart_toStartOf="@id/descriptionTextField"
            app:layout_constraintTop_toBottomOf="@id/quantitySeekBar" />

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/categoryRw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:itemSpacing="8dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/descriptionTextField"
            app:layout_constraintStart_toStartOf="@id/descriptionTextField"
            app:layout_constraintTop_toBottomOf="@id/categoryTextView"
            app:spanCount="2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priorityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:text="@string/priority"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/priorityRadioGroup"
            app:layout_constraintEnd_toEndOf="@id/descriptionTextField"
            app:layout_constraintStart_toStartOf="@id/descriptionTextField"
            app:layout_constraintTop_toBottomOf="@id/categoryRw" />

        <RadioGroup
            android:id="@+id/priorityRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/RadioButtonLow"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/descriptionTextField"
            app:layout_constraintStart_toStartOf="@id/descriptionTextField"
            app:layout_constraintTop_toBottomOf="@id/priorityTextView">

            <RadioButton
                android:id="@+id/RadioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low_priority_radio_button" />

            <RadioButton
                android:id="@+id/RadioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium_priority_radio_button" />

            <RadioButton
                android:id="@+id/RadioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high_priority_radio_button" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save_button"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priorityRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>